[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/HUD.gd" type="Script" id=1]
[ext_resource path="res://Game/TimeControls.gd" type="Script" id=2]

[sub_resource type="ButtonGroup" id=1]

resource_local_to_scene = true

[node name="HUD" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 134.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 177.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 86.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Turn" type="Label" parent="HBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 86.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "White's Turn"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Check" type="Label" parent="HBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 86.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Reset" type="Button" parent="HBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 48.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="TimeControls" type="VBoxContainer" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_right = 177.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Size Flags" ]

[node name="Move1" type="CheckBox" parent="HBoxContainer/TimeControls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 87.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "Present"
flat = true
clip_text = true
align = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Move2" type="CheckBox" parent="HBoxContainer/TimeControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 87.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+1 Move"
flat = true
clip_text = true
align = 0

[node name="Move3" type="CheckBox" parent="HBoxContainer/TimeControls" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 87.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+2 Moves"
flat = true
clip_text = true
align = 0

[node name="Move4" type="CheckBox" parent="HBoxContainer/TimeControls" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 87.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+3 Moves"
flat = true
clip_text = true
align = 0

[node name="Move5" type="CheckBox" parent="HBoxContainer/TimeControls" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 87.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+4 Moves"
flat = true
clip_text = true
align = 0

[node name="Move6" type="CheckBox" parent="HBoxContainer/TimeControls" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 87.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+5 Moves"
flat = true
clip_text = true
align = 0

[node name="Move7" type="CheckBox" parent="HBoxContainer/TimeControls" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 87.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+6 Moves"
flat = true
clip_text = true
align = 0

[node name="Move8" type="CheckBox" parent="HBoxContainer/TimeControls" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 196.0
margin_right = 87.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "+7 Moves"
flat = true
clip_text = true
align = 0

[node name="PromotionPopup" type="PopupPanel" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_right = 116.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = false
_sections_unfolded = [ "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="PromotionPopup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 56.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Queen" type="Button" parent="PromotionPopup/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 56.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Queen"
flat = false
align = 1

[node name="Rook" type="Button" parent="PromotionPopup/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 56.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Rook"
flat = false
align = 1

[node name="Bishop" type="Button" parent="PromotionPopup/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 56.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Bishop"
flat = false
align = 1

[node name="Knight" type="Button" parent="PromotionPopup/Buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 56.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Knight"
flat = false
align = 1

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Reset" to="." method="_on_Button_pressed"]

[connection signal="change" from="HBoxContainer/TimeControls" to="." method="_on_TimeControls_change"]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move1" to="HBoxContainer/TimeControls" method="change" binds= [ 1 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move2" to="HBoxContainer/TimeControls" method="change" binds= [ 2 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move3" to="HBoxContainer/TimeControls" method="change" binds= [ 3 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move4" to="HBoxContainer/TimeControls" method="change" binds= [ 4 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move5" to="HBoxContainer/TimeControls" method="change" binds= [ 5 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move6" to="HBoxContainer/TimeControls" method="change" binds= [ 6 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move7" to="HBoxContainer/TimeControls" method="change" binds= [ 7 ]]

[connection signal="pressed" from="HBoxContainer/TimeControls/Move8" to="HBoxContainer/TimeControls" method="change" binds= [ 8 ]]

[connection signal="pressed" from="PromotionPopup/Buttons/Queen" to="." method="_on_Queen_pressed"]

[connection signal="pressed" from="PromotionPopup/Buttons/Rook" to="." method="_on_Rook_pressed"]

[connection signal="pressed" from="PromotionPopup/Buttons/Bishop" to="." method="_on_Bishop_pressed"]

[connection signal="pressed" from="PromotionPopup/Buttons/Knight" to="." method="_on_Knight_pressed"]


